# norske-epitafier

./: .env.dist  .gitmodules  Pipfile  README.adoc  README.md  config.yml.dist  epitafium.rnc  epitafium.xsd  iiif-test.html  index.adoc  index.html  pyproject.toml  update_collection.sh
.github/workflows/: build.yml
conversion/: config.yml.dist  epitafium.rnc  pyproject.toml
conversion/scripts/: dc_record.xsl  delete_alma_collection.py  delete_collection.py  fetch_ids.py  job_status.py  make_map_data.py  make_thumbs.py  make_tiles.py  push_to_alma.py
conversion/scripts/modules/: alma.py  processor.py  settings.py  util.py
popcorn-viewer/: package-lock.json  package.json  tailwind.config.js
popcorn-viewer/components/: ImageViewerLeaflet.vue  ImageViewerOpenLayers.vue  ImageViewerOpenSeadragon.vue  ManifestViewer.vue
popcorn-viewer/src/: index.html  index.ts  manifest-service.js  query-parser.js  settings.js
popcorn-viewer/src/components/: App.vue  CollectionView.vue  CollectionViewer.vue  Facets.vue  ImageViewerLeaflet.vue  ImageViewerOpenLayers.vue  ImageViewerOpenSeadragon.vue  LystettRullegardinMeny.vue  ManifestView.vue  ManifestViewer.vue  Map.vue  MapView.vue  MetadataElement.vue  NavBar.vue  SearchBar.vue
popcorn-viewer/src/css/: app.pcss
popcorn-viewer/static/: kart.html  manifest.php
scripts/: convert.py  dc_record.xsl  process.py  upload.py
scripts/modules/: alma.py  processor.py  records.py  settings.py  source_record.py  util.py
src/oslo-christiania09/: metadata.xml
