[tool.poetry]
name = "norske-epitafier"
version = "0.1.0"
description = ""
authors = ["Dan Michael O. Heggø <danmichaelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydash = "^4.8.0"
lxml = "^4.5.2"
python-dotenv = "^0.14.0"
requests = "^2.24.0"
boto3 = "^1.14.48"
addict = "^2.2.1"
rnc2rng = "^2.6.4"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
